<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <POU Name="init_Jcl" Id="{6dbe0c81-50c2-425a-ac43-b4f3e1282f38}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION init_Jcl : BOOL
VAR_INPUT
	pJcl: POINTER TO T_JCL;
	/// instance array of all controller instances
	pCtrlInst: POINTER TO fb_CtrlBase;
	/// common interface array of all controllers (main use for PLC)
	pCtrlCIf: POINTER TO T_Ctrl_CIf;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[pJcl^.datachn.rSendData.fbDataChannel.InitChannel(SIZEOF(pJcl^.datachn.rSendData.rDataChannelItem), ADR(pJcl^.datachn.rSendData.rDataChannelItem));
pJcl^.datachn.rSendData.fbFifo.DataChannel := ADR(pJcl^.datachn.rSendData.fbDataChannel);
pJcl^.datachn.rSendData.fbFifo.FreeDataPointer := TRUE;
pJcl^.datachn.rSendData.fbFifo.Enable := TRUE;

pJcl^.ctrl.fbJcl_Tcp.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pJcl^.id.Jcl_Tcp);
pJcl^.ctrl.fbJcl.iniAllCtrlArrays(pCtrlInst,pCtrlCIf,pJcl^.id.Jcl);
pJcl^.ctrl.fbJcl.TCP := ADR(pJcl^.ctrl.fbJcl_Tcp);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>